--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -34,5 +34,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/display_activity_tip1" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/display_activity_tip2" />
 
 </LinearLayout>
