--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -7,14 +7,30 @@
     tools:context="com.digitalwonders.ilhan.spherify.HelpActivity"
     android:background="@color/white">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/help_lin_layout"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp">
+        <ImageButton
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageButton"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/bg" />
+    </LinearLayout>
 
     <TextView android:text="@string/help_activity_html" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:elevation="5dp"
-        />
+        android:id="@+id/textView"
+        android:layout_below="@+id/help_lin_layout" />
 
-    <ImageView
+    <!--ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/bg_gray"/>
+        android:src="@drawable/bg_gray"/-->
+
+
 
 </RelativeLayout>
